--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="lead">.Hey guys welcome to my home page. I am excited to share my hobbies. I play soccer. I play videogames. I like running. I like eating fast food. </p>
       </div>
       <div class="col-md-5">
-        <img src="soccer boot" alt="Sworaj L" width="500" height="400">
+        <img src="soccer boot.jpg" alt="Sworaj L" width="500" height="400">
 
       </div>
     </div>
