--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">A LITTLE ABOUT <span class="text-muted">ME.</span></h2>
-        <p class="lead">.Hey guys welcome to my home page. I am excited to share my hobbies. I play soccer. I play videogames. I like running. I like eating fast food. </p>
+        <p class="lead">.Hey guys welcome to my home page. I am excited to share my hobbies. I played soccer in highschool for a club and for my highschool. I was the number 14 in the team. I mostly played rightback but there were few instacnces where I played mid. My favorite soccer team is Chelsea Fc and I have been supporting them since 2003. I also am a barber and I like to cut hair and i do designs on people's hair. My insta is eden_blendz and you can check it out I pos my haircuts there. </p>
       </div>
       <div class="col-md-5">
         <img src="soccer boot.jpg" alt="Sworaj L" width="500" height="400">
